--- a/app/views/docs/command-line-ci.phtml
+++ b/app/views/docs/command-line-ci.phtml
@@ -7,7 +7,7 @@ The Appwrite CLI can be used in a non-interactive and headless manner, without s
 
 <div class="ide margin-bottom" data-lang="bash" data-lang-label="CLI">
     <pre class="line-numbers"><code class="prism language-bash" data-prism>appwrite client \
-    --endpoint https://[HOSTNAME_OR_IP]/v1 \
+    --endpoint https://cloud.appwrite.io/v1 \
     --projectId [YOUR_PROJECT_ID] \
     --key YOUR_API_KEY</code></pre>
 </div>
