--- a/app/views/docs/command-line.phtml
+++ b/app/views/docs/command-line.phtml
@@ -101,7 +101,7 @@ brew install --HEAD appwrite</code></pre>
 <p>At any point, if you would like to change your server's endpoint, project ID, or self-signed certificate acceptance, use the <code>client</code> command.</p>
 
 <div class="ide margin-bottom" data-lang="bash" data-lang-label="CLI">
-    <pre class="line-numbers"><code class="prism language-bash" data-prism>appwrite client --endpoint https://[HOSTNAME_OR_IP]/v1
+    <pre class="line-numbers"><code class="prism language-bash" data-prism>appwrite client --endpoint https://cloud.appwrite.io/v1
 appwrite client --key 23f24gwrhSDgefaY
 appwrite client --selfSigned true
 appwrite client --reset // Resets your CLI configuration
