--- a/app/views/docs/custom-domains.phtml
+++ b/app/views/docs/custom-domains.phtml
@@ -372,7 +372,7 @@ var appwrite = new Appwrite();
 
 appwrite
     .setEndpoint('https://appwrite.example.com/v1')
-    .setProject('455x34dfkj')
+    .setProject('[PROJECT_ID]')
 ;
 </code></pre>
 </div>
