--- a/app/views/docs/getting-started-for-android.phtml
+++ b/app/views/docs/getting-started-for-android.phtml
@@ -75,7 +75,7 @@ import io.appwrite.services.Account
 
 val client = Client(context)
     .setEndpoint("https://cloud.appwrite.io/v1") // Your Appwrite Endpoint
-    .setProject("5df5acd0d48c2")                // Your project ID
+    .setProject("[PROJECT_ID]")                // Your project ID
 </div>
 
 <p>Before sending any API calls to your new Appwrite project, make sure your Android device or emulator has network access to your Appwrite project's hostname or IP address.</p>
@@ -124,7 +124,7 @@ import io.appwrite.services.Account
 
 val client = Client(context)
     .setEndpoint("https://cloud.appwrite.io/v1") // Your Appwrite Endpoint
-    .setProject("5df5acd0d48c2")                // Your project ID
+    .setProject("[PROJECT_ID]")                // Your project ID
 
 val account = Account(client)
 
