--- a/app/views/docs/getting-started-for-apple.phtml
+++ b/app/views/docs/getting-started-for-apple.phtml
@@ -111,7 +111,7 @@ import AppwriteModels
 
 let client = Client()
     .setEndpoint("https://cloud.appwrite.io/v1") // Your Appwrite Endpoint
-    .setProject("5df5acd0d48c2")                // Your project ID</code></pre>
+    .setProject("[PROJECT_ID]")                // Your project ID</code></pre>
 </div>
 
 <p>Before sending any API calls to your new Appwrite project, make sure your device or emulator has network access to your Appwrite project's hostname or IP address.</p>
@@ -161,7 +161,7 @@ import AppwriteModels
 
 let client = Client()
   .setEndpoint("https://cloud.appwrite.io/v1") // Your Appwrite Endpoint
-  .setProject("5df5acd0d48c2")                // Your project ID
+  .setProject("[PROJECT_ID]")                // Your project ID
 
 // Register User
 let account = Account(client)
