--- a/app/views/docs/getting-started-for-server.phtml
+++ b/app/views/docs/getting-started-for-server.phtml
@@ -123,7 +123,7 @@ $swiftVersion = $versions['swift'] ?? '';
 
 const client = new Client()
     .setEndpoint('https://cloud.appwrite.io/v1') // Your Appwrite Endpoint
-    .setProject('5df5acd0d48c2')                // Your project ID
+    .setProject('[PROJECT_ID]')                // Your project ID
     .setKey('919c2db5d4...a2a3346ad2');         // Your secret API key
 </code></pre>
         </div>
@@ -136,7 +136,7 @@ const client = new Client()
 
 $client = (new Client())
     ->setEndpoint('https://cloud.appwrite.io/v1') // Your Appwrite Endpoint
-    ->setProject('5df5acd0d48c2')                // Your project ID
+    ->setProject('[PROJECT_ID]')                // Your project ID
     ->setKey('919c2db5d4...a2a3346ad2');         // Your secret API key
 </code></pre>
         </div>
@@ -148,7 +148,7 @@ $client = (new Client())
 
 client = Client()
     .set_endpoint('https://cloud.appwrite.io/v1') # Your API Endpoint
-    .set_project('5df5acd0d48c2')                # Your project ID
+    .set_project('[PROJECT_ID]')                # Your project ID
     .set_key('919c2db5d4...a2a3346ad2'))          # Your secret API key
 </code></pre>
         </div>
@@ -160,7 +160,7 @@ client = Client()
 
 client = Appwrite::Client.new()
     .set_endpoint('https://cloud.appwrite.io/v1') # Your API Endpoint
-    .set_project('5df5acd0d48c2')                # Your project ID
+    .set_project('[PROJECT_ID]')                # Your project ID
     .set_key('919c2db5d4...a2a3346ad2')          # Your secret API key
 </code></pre>
         </div>
@@ -172,7 +172,7 @@ client = Appwrite::Client.new()
 
 const client = new Client()
     .setEndpoint('https://cloud.appwrite.io/v1') // Your Appwrite Endpoint
-    .setProject('5df5acd0d48c2')                // Your project ID
+    .setProject('[PROJECT_ID]')                // Your project ID
     .setKey('919c2db5d4...a2a3346ad2');         // Your secret API key
 </code></pre>
         </div>
@@ -184,7 +184,7 @@ const client = new Client()
 
 Client client = Client()
     .setEndpoint('https://cloud.appwrite.io/v1') // Your Appwrite Endpoint
-    .setProject('5df5acd0d48c2')                // Your project ID
+    .setProject('[PROJECT_ID]')                // Your project ID
     .setKey('919c2db5d4...a2a3346ad2');         // Your secret API key
 </code></pre>
         </div>
@@ -196,7 +196,7 @@ Client client = Client()
 
 val client = Client()
     .setEndpoint("https://cloud.appwrite.io/v1") // Your Appwrite Endpoint
-    .setProject("5df5acd0d48c2")                // Your project ID
+    .setProject("[PROJECT_ID]")                // Your project ID
     .setKey("919c2db5d4...a2a3346ad2")          // Your secret API key
 </code></pre>
         </div>
@@ -208,7 +208,7 @@ val client = Client()
 
 let client = Client()
     .setEndpoint("https://cloud.appwrite.io/v1") // Your Appwrite Endpoint
-    .setProject("5df5acd0d48c2")                // Your project ID
+    .setProject("[PROJECT_ID]")                // Your project ID
     .setKey("919c2db5d4...a2a3346ad2")          // Your secret API key
 </code></pre>
         </div>
@@ -280,7 +280,7 @@ let response = try await account.createJWT()</code></pre>
 
 const client = new Client()
     .setEndpoint('https://cloud.appwrite.io/v1') // Your Appwrite Endpoint
-    .setProject('5df5acd0d48c2')                // Your project ID
+    .setProject('[PROJECT_ID]')                // Your project ID
     .setJWT('919c2db5d4...a2a3346ad2');         // Your secret JWT
 </code></pre>
         </div>
@@ -293,7 +293,7 @@ const client = new Client()
 
 $client = (new Client())
     ->setEndpoint('https://cloud.appwrite.io/v1') // Your Appwrite Endpoint
-    ->setProject('5df5acd0d48c2')                // Your project ID
+    ->setProject('[PROJECT_ID]')                // Your project ID
     ->setJWT('919c2db5d4...a2a3346ad2');         // Your secret JWT
 </code></pre>
         </div>
@@ -304,8 +304,8 @@ $client = (new Client())
             <pre class="line-numbers"><code class="prism language-python" data-prism>from appwrite.client import Client
 
 client = Client()
-  .set_endpoint('https://[HOSTNAME_OR_IP]/v1') # Your API Endpoint
-  .set_project('5df5acd0d48c2')                # Your project ID
+  .set_endpoint('https://cloud.appwrite.io/v1') # Your API Endpoint
+  .set_project('[PROJECT_ID]')                # Your project ID
   .set_key('919c2db5d4...a2a3346ad2')          # Your secret JWT
 )
 </code></pre>
@@ -318,7 +318,7 @@ client = Client()
 
 client = Client.new()
     .set_endpoint('https://cloud.appwrite.io/v1') # Your API Endpoint
-    .set_project('5df5acd0d48c2')                # Your project ID
+    .set_project('[PROJECT_ID]')                # Your project ID
     .set_key('919c2db5d4...a2a3346ad2')          # Your secret JWT
 </code></pre>
         </div>
@@ -330,7 +330,7 @@ client = Client.new()
 
 const client = new Client()
     .setEndpoint('https://cloud.appwrite.io/v1') // Your Appwrite Endpoint
-    .setProject('5df5acd0d48c2')                // Your project ID
+    .setProject('[PROJECT_ID]')                // Your project ID
     .setJWT('919c2db5d4...a2a3346ad2');         // Your secret JWT
 </code></pre>
         </div>
@@ -342,7 +342,7 @@ const client = new Client()
 
 Client client = Client()
     .setEndpoint('https://cloud.appwrite.io/v1') // Your Appwrite Endpoint
-    .setProject('5df5acd0d48c2')                // Your project ID
+    .setProject('[PROJECT_ID]')                // Your project ID
     .setJWT('919c2db5d4...a2a3346ad2');         // Your secret JWT
 </code></pre>
         </div>
@@ -354,7 +354,7 @@ Client client = Client()
 
 val client = Client()
     .setEndpoint("https://cloud.appwrite.io/v1") // Your Appwrite Endpoint
-    .setProject("5df5acd0d48c2")                // Your project ID
+    .setProject("[PROJECT_ID]")                // Your project ID
     .setJWT("919c2db5d4...a2a3346ad2")          // Your secret JWT
 </code></pre>
         </div>
@@ -366,7 +366,7 @@ val client = Client()
 
 let client = Client()
     .setEndpoint("https://cloud.appwrite.io/v1") // Your Appwrite Endpoint
-    .setProject("5df5acd0d48c2")                // Your project ID
+    .setProject("[PROJECT_ID]")                // Your project ID
     .setJWT("919c2db5d4...a2a3346ad2")          // Your secret JWT
 </code></pre>
         </div>
@@ -528,7 +528,7 @@ let user = try await users.create(
 
 const client = new Client()
     .setEndpoint('https://cloud.appwrite.io/v1') // Your Appwrite Endpoint
-    .setProject('5df5acd0d48c2')                // Your project ID
+    .setProject('[PROJECT_ID]')                // Your project ID
     .setKey('919c2db5d4...a2a3346ad2');         // Your secret API key
 
 const users = new Users(client);
@@ -557,7 +557,7 @@ use Appwrite\Services\Users;
 
 $client = (new Client())
     ->setEndpoint('https://cloud.appwrite.io/v1') // Your Appwrite Endpoint
-    ->setProject('5df5acd0d48c2')                // Your project ID
+    ->setProject('[PROJECT_ID]')                // Your project ID
     ->setKey('919c2db5d4...a2a3346ad2');         // Your secret API key
 
 $users = new Users($client);
@@ -578,8 +578,8 @@ from appwrite.id import ID
 from appwrite.services.users import Users
 
 client = Client()
-  .set_endpoint('https://[HOSTNAME_OR_IP]/v1') # Your API Endpoint
-  .set_project('5df5acd0d48c2')                # Your project ID
+  .set_endpoint('https://cloud.appwrite.io/v1') # Your API Endpoint
+  .set_project('[PROJECT_ID]')                # Your project ID
   .set_key('919c2db5d4...a2a3346ad2'))          # Your secret API key
 
 users = Users(client)
@@ -601,7 +601,7 @@ include Appwrite
 
 client = Client.new()
     .set_endpoint('https://cloud.appwrite.io/v1') # Your API Endpoint
-    .set_project('5df5acd0d48c2')                # Your project ID
+    .set_project('[PROJECT_ID]')                # Your project ID
     .set_key('919c2db5d4...a2a3346ad2')          # Your secret API key
 
 users = Users.new(client)
@@ -621,7 +621,7 @@ user = users.create(
 
 const client = new Client()
     .setEndpoint('https://cloud.appwrite.io/v1') // Your Appwrite Endpoint
-    .setProject('5df5acd0d48c2')                // Your project ID
+    .setProject('[PROJECT_ID]')                // Your project ID
     .setKey('919c2db5d4...a2a3346ad2')          // Your secret API key
 
 const users = new Users(client);
@@ -647,7 +647,7 @@ promise.then(function (response) {
 
 final client = Client()
     .setEndpoint('https://cloud.appwrite.io/v1') // Your Appwrite Endpoint
-    .setProject('5df5acd0d48c2')                // Your project ID
+    .setProject('[PROJECT_ID]')                // Your project ID
     .setKey('919c2db5d4...a2a3346ad2');         // Your secret API key
 
 final users = Users(client);
@@ -669,7 +669,7 @@ import io.appwrite.services.Users
 
 val client = Client()
     .setEndpoint("https://cloud.appwrite.io/v1") // Your Appwrite Endpoint
-    .setProject("5df5acd0d48c2")                // Your project ID
+    .setProject("[PROJECT_ID]")                // Your project ID
     .setKey("919c2db5d4...a2a3346ad2")          // Your secret API key
 
 val users = Users(client)
@@ -690,7 +690,7 @@ import AppwriteModels
 
 let client = Client()
     .setEndpoint("https://cloud.appwrite.io/v1") // Your Appwrite Endpoint
-    .setProject("5df5acd0d48c2")                // Your project ID
+    .setProject("[PROJECT_ID]")                // Your project ID
     .setKey("919c2db5d4...a2a3346ad2")          // Your secret API key
 
 let users = Users(client)
