--- a/app/views/docs/getting-started-for-web.phtml
+++ b/app/views/docs/getting-started-for-web.phtml
@@ -68,7 +68,7 @@ $demos = $platform['demos'] ?? [];
 <div class="ide" data-lang="javascript" data-lang-label="Web SDK">
     <pre class="line-numbers"><code class="prism language-javascript" data-prism>const client = new Client()
     .setEndpoint('https://cloud.appwrite.io/v1') // Your API Endpoint
-    .setProject('5df5acd0d48c2');               // Your project ID
+    .setProject('[PROJECT_ID]');               // Your project ID
 </code></pre>
 </div>
 
@@ -112,7 +112,7 @@ client.subscribe('files', response => {
 
 const client = new Client()
     .setEndpoint('https://cloud.appwrite.io/v1') // Your API Endpoint
-    .setProject('5df5acd0d48c2');               // Your project ID
+    .setProject('[PROJECT_ID]');               // Your project ID
 
 const account = new Account(client);
 
