--- a/app/views/docs/realtime.phtml
+++ b/app/views/docs/realtime.phtml
@@ -525,7 +525,7 @@ subscription.close()</code></pre>
             <pre class="line-numbers"><code class="prism language-javascript" data-prism>import { Client } from "appwrite";
 const client = new Client();
 
-client.setEndpointRealtime('[HOSTNAME_OR_IP]');</code></pre>
+client.setEndpointRealtime('cloud.appwrite.io');</code></pre>
         </div>
     </li>
     <li>
@@ -533,21 +533,21 @@ client.setEndpointRealtime('[HOSTNAME_OR_IP]');</code></pre>
 
         <div class="ide margin-bottom" data-lang="dart" data-lang-label="Flutter SDK">
             <pre class="line-numbers"><code class="prism language-dart" data-prism>final client = Client();
-client.setEndpointRealtime('[HOSTNAME_OR_IP]');</code></pre>
+client.setEndpointRealtime('cloud.appwrite.io');</code></pre>
         </div>
     </li>
     <li>
         <h3>Android</h3>
         <div class="ide margin-bottom" data-lang="android" data-lang-label="Android SDK">
             <pre class="line-numbers"><code class="prism language-kotlin" data-prism>val client = Client(context)
-client.setEndpointRealtime("[HOSTNAME_OR_IP]")</code></pre>
+client.setEndpointRealtime("cloud.appwrite.io")</code></pre>
         </div>
     </li>
     <li>
         <h3>Apple</h3>
         <div class="ide margin-bottom" data-lang="apple" data-lang-label="Apple SDK">
             <pre class="line-numbers"><code class="prism language-swift" data-prism>let client = Client()
-client.setEndpointRealtime("[HOSTNAME_OR_IP]")</code></pre>
+client.setEndpointRealtime("cloud.appwrite.io")</code></pre>
         </div>
     </li>
 </ul>
