--- a/app/views/docs/functions.phtml
+++ b/app/views/docs/functions.phtml
@@ -593,7 +593,7 @@ $image = new View(__DIR__.'/../general/image.phtml');
             <pre class="line-numbers"><code class="prism language-javascript" data-prism>import { Client, Functions } from "appwrite";
 
 const client = new Client()
-    .setEndpoint('https://[HOSTNAME_OR_IP]/v1')
+    .setEndpoint('https://cloud.appwrite.io/v1')
     .setProject('[PROJECT_ID]');
 
 const functions = new Functions(client);
@@ -615,7 +615,7 @@ promise.then(function (response) {
 
 void main() async {
     final client = Client()
-        .setEndpoint('https://[HOSTNAME_OR_IP]/v1')
+        .setEndpoint('https://cloud.appwrite.io/v1')
         .setProject('[PROJECT_ID]');
 
     final functions = Functions(client);
@@ -635,7 +635,7 @@ import io.appwrite.services.Functions
 
 suspend fun main() {
     val client = Client(applicationContext)
-        .setEndpoint("https://[HOSTNAME_OR_IP]/v1")
+        .setEndpoint("https://cloud.appwrite.io/v1")
         .setProject("[PROJECT_ID]")
 
     val functions = Functions(client)
@@ -654,7 +654,7 @@ suspend fun main() {
 
 func main() async throws {
     let client = Client()
-      .setEndpoint("https://[HOSTNAME_OR_IP]/v1")
+      .setEndpoint("https://cloud.appwrite.io/v1")
       .setProject("[PROJECT_ID]")
 
     let functions = Functions(client)
