--- a/app/views/docs/getting-started-for-flutter.phtml
+++ b/app/views/docs/getting-started-for-flutter.phtml
@@ -133,7 +133,7 @@ close the window.
 
 Client client = Client()
     .setEndpoint('https://cloud.appwrite.io/v1') // Your Appwrite Endpoint
-    .setProject('5e8cf4f46b5e8')         // Your project ID
+    .setProject('[PROJECT_ID]')         // Your project ID
     .setSelfSigned(status: true);        // For self signed certificates, only use for development
 </code></pre>
 </div>
@@ -186,7 +186,7 @@ subscription.stream.listen((response) {
 
 Client client = Client()
     .setEndpoint('https://cloud.appwrite.io/v1')  // Your Appwrite Endpoint
-    .setProject('5e8cf4f46b5e8')          // Your project ID
+    .setProject('[PROJECT_ID]')          // Your project ID
     .setSelfSigned(status: true);         // For self signed certificates, only use for development
 
 Account account = Account(client);
