--- a/app/views/docs/pagination.phtml
+++ b/app/views/docs/pagination.phtml
@@ -16,7 +16,7 @@
             <pre class="line-numbers"><code class="prism language-javascript" data-prism>import { Client, Databases, Query } from "appwrite";
 
 const client = new Client()
-    .setEndpoint('https://[HOSTNAME_OR_IP]/v1')
+    .setEndpoint('https://cloud.appwrite.io/v1')
     .setProject('[PROJECT_ID]');
 
 const databases = new Databases(client);
@@ -49,7 +49,7 @@ const page2 = await databases.listDocuments(
 
 void main() async {
     final client = Client()
-        .setEndpoint('https://[HOSTNAME_OR_IP]/v1')
+        .setEndpoint('https://cloud.appwrite.io/v1')
         .setProject('[PROJECT_ID]');
 
     final databases = Databases(client);
@@ -84,7 +84,7 @@ import io.appwrite.services.Databases
 
 suspend fun main() {
     val client = Client(applicationContext)
-        .setEndpoint("https://[HOSTNAME_OR_IP]/v1")
+        .setEndpoint("https://cloud.appwrite.io/v1")
         .setProject("[PROJECT_ID]")
 
     val databases = Databases(client)
@@ -117,7 +117,7 @@ import AppwriteModels
 
 func main() async throws {
     let client = Client()
-        .setEndpoint("https://[HOSTNAME_OR_IP]/v1")
+        .setEndpoint("https://cloud.appwrite.io/v1")
         .setProject("[PROJECT_ID]")
 
     let databases = Databases(client)
@@ -161,7 +161,7 @@ func main() async throws {
             <pre class="line-numbers"><code class="prism language-javascript" data-prism>import { Databases, Query } from "appwrite";
 
 const client = new Client()
-    .setEndpoint("https://[HOSTNAME_OR_IP]/v1")
+    .setEndpoint("https://cloud.appwrite.io/v1")
     .setProject("[PROJECT_ID]");
 
 const databases = new Databases(client);
@@ -195,7 +195,7 @@ const page2 = await databases.listDocuments(
 
 void main() async {
     final client = Client()
-        .setEndpoint('https://[HOSTNAME_OR_IP]/v1')
+        .setEndpoint('https://cloud.appwrite.io/v1')
         .setProject('[PROJECT_ID]');
 
     final databases = Databases(client);
@@ -234,7 +234,7 @@ import io.appwrite.services.Databases
 
 suspend fun main() {
     val client = Client(applicationContext)
-        .setEndpoint("https://[HOSTNAME_OR_IP]/v1")
+        .setEndpoint("https://cloud.appwrite.io/v1")
         .setProject("[PROJECT_ID]")
 
     val databases = Databases(client)
@@ -268,7 +268,7 @@ import AppwriteModels
 
 func main() async throws {
     let client = Client()
-      .setEndpoint("https://[HOSTNAME_OR_IP]/v1")
+      .setEndpoint("https://cloud.appwrite.io/v1")
       .setProject("[PROJECT_ID]")
 
     let databases = Databases(client)
