--- a/app/views/docs/queries.phtml
+++ b/app/views/docs/queries.phtml
@@ -126,7 +126,7 @@
             <pre class="line-numbers"><code class="prism language-javascript" data-prism>import { Client, Databases, Query } from "appwrite";
 
 const client = new Client()
-    .setEndpoint('https://[HOSTNAME_OR_IP]/v1')
+    .setEndpoint('https://cloud.appwrite.io/v1')
     .setProject('[PROJECT_ID]');
 
 const databases = new Databases(client);
@@ -148,7 +148,7 @@ databases.listDocuments(
 
 void main() async {
     final client = Client()
-        .setEndpoint('https://[HOSTNAME_OR_IP]/v1')
+        .setEndpoint('https://cloud.appwrite.io/v1')
         .setProject('[PROJECT_ID]');
 
     final databases = Databases(client);
@@ -177,7 +177,7 @@ import io.appwrite.services.Databases
 
 suspend fun main() {
     val client = Client(applicationContext)
-        .setEndpoint('https://[HOSTNAME_OR_IP]/v1')
+        .setEndpoint('https://cloud.appwrite.io/v1')
         .setProject('[PROJECT_ID]');
 
     val databases = Databases(client)
@@ -205,7 +205,7 @@ import AppwriteModels
 
 func main() async throws {
     let client = Client()
-        .setEndpoint("https://[HOSTNAME_OR_IP]/v1")
+        .setEndpoint("https://cloud.appwrite.io/v1")
         .setProject("[PROJECT_ID]")
 
     let databases = Databases(client)
@@ -255,7 +255,7 @@ func main() async throws {
             <pre class="line-numbers"><code class="prism language-javascript" data-prism>import { Client, Databases, Query } from "appwrite";
 
 const client = new Client()
-    .setEndpoint('https://[HOSTNAME_OR_IP]/v1')
+    .setEndpoint('https://cloud.appwrite.io/v1')
     .setProject('[PROJECT_ID]');
 
 const databases = new Databases(client);
@@ -276,7 +276,7 @@ databases.listDocuments(
 
 void main() async {
     final client = Client()
-        .setEndpoint('https://[HOSTNAME_OR_IP]/v1')
+        .setEndpoint('https://cloud.appwrite.io/v1')
         .setProject('[PROJECT_ID]');
 
     final databases = Databases(client);
@@ -304,7 +304,7 @@ import io.appwrite.services.Databases
 
 suspend fun main() {
     val client = Client(applicationContext)
-        .setEndpoint('https://[HOSTNAME_OR_IP]/v1')
+        .setEndpoint('https://cloud.appwrite.io/v1')
         .setProject('[PROJECT_ID]');
 
     val databases = Databases(client)
@@ -331,7 +331,7 @@ import AppwriteModels
 
 func main() async throws {
     let client = Client()
-        .setEndpoint('https://[HOSTNAME_OR_IP]/v1')
+        .setEndpoint('https://cloud.appwrite.io/v1')
         .setProject('[PROJECT_ID]');
 
     let databases = Databases(client)
@@ -379,7 +379,7 @@ func main() async throws {
             <pre class="line-numbers"><code class="prism language-javascript" data-prism>import { Client, Databases, Query } from "appwrite";
 
 const client = new Client()
-    .setEndpoint('https://[HOSTNAME_OR_IP]/v1')
+    .setEndpoint('https://cloud.appwrite.io/v1')
     .setProject('[PROJECT_ID]');
 
 const databases = new Databases(client);
@@ -401,7 +401,7 @@ databases.listDocuments(
 
 void main() async {
     final client = Client()
-        .setEndpoint("https://[HOSTNAME_OR_IP]/v1")
+        .setEndpoint("https://cloud.appwrite.io/v1")
         .setProject("[PROJECT_ID]");
 
     final databases = Databases(client);
@@ -429,7 +429,7 @@ import io.appwrite.services.Databases
 
 suspend fun main() {
     val client = Client(applicationContext)
-        .setEndpoint("https://[HOSTNAME_OR_IP]/v1")
+        .setEndpoint("https://cloud.appwrite.io/v1")
         .setProject("[PROJECT_ID]")
 
     val databases = Databases(client)
@@ -457,7 +457,7 @@ import AppwriteModels
 
 func main() async throws {
     let client = Client()
-      .setEndpoint("https://[HOSTNAME_OR_IP]/v1")
+      .setEndpoint("https://cloud.appwrite.io/v1")
       .setProject("[PROJECT_ID]")
 
     let databases = Databases(client)
