--- a/app/views/docs/storage.phtml
+++ b/app/views/docs/storage.phtml
@@ -119,7 +119,7 @@ import io.appwrite.services.Storage
 suspend fun main() {
     val client = Client(applicationContext)
         .setEndpoint("https://cloud.appwrite.io/v1") // Your API Endpoint
-        .setProject("5df5acd0d48c2") // Your project ID
+        .setProject("[PROJECT_ID]") // Your project ID
 
     val storage = Storage(client)
 
@@ -160,7 +160,7 @@ func main() async throws {
             <pre class="line-numbers"><code class="prism language-http" data-prism>POST /v1/storage/buckets/{bucketId}/files HTTP/1.1
 Content-Type: multipart/form-data; boundary="cec8e8123c05ba25"
 Content-Length: *Length of your entity body in bytes*
-X-Appwrite-Project: 5df5acd0d48c2
+X-Appwrite-Project: [PROJECT_ID]
 
 --cec8e8123c05ba25
 Content-Disposition: form-data; name="operations"
